@@ -3,13 +3,13 @@
  <adapters/>
  <utilities>
   <utility
-     interface="Products.CMFUid.interfaces.IUniqueIdAnnotationManagement"
-     object="/portal_uidannotation"/>
-  <utility
      interface="Products.CMFUid.interfaces.IUniqueIdGenerator"
      object="/portal_uidgenerator"/>
   <utility
      interface="Products.CMFUid.interfaces.IUniqueIdHandler"
      object="/portal_uidhandler"/>
+  <utility
+     interface="Products.CMFUid.interfaces.IUniqueIdAnnotationManagement"
+     object="/portal_uidannotation"/>
  </utilities>
 </componentregistry>
