@@ -18,24 +18,54 @@ $Id$
 import unittest
 import Testing
 
-from OFS.event import ObjectClonedEvent
+from AccessControl.SecurityManagement import newSecurityManager
+from Acquisition import Implicit
+import transaction
 
-from zope.app.container.contained import ObjectAddedEvent
 from zope.component import getSiteManager
-from zope.event import notify
+from zope.component import getUtility
+from zope.interface import implements
 
 from Products.CMFCore.PortalFolder import PortalFolder
-from Products.CMFCore.testing import EventZCMLLayer
 from Products.CMFCore.tests.base.dummy import DummyContent
 from Products.CMFCore.tests.base.testcase import SecurityTest
+from Products.CMFCore.tests.test_CMFCatalogAware import TheClass
+from Products.CMFCore.tests.test_CMFCatalogAware import SimpleFolder
+from Products.CMFCore.tests.test_PortalFolder import _AllowedUser
+from Products.CMFCore.tests.test_PortalFolder import _SensitiveSecurityPolicy
 from Products.CMFUid.interfaces import IUniqueIdAnnotationManagement
+from Products.CMFUid.interfaces import UniqueIdError
+from Products.CMFUid.interfaces import IUniqueIdHandler
+from Products.CMFUid.testing import UidEventZCMLLayer
 
 UID_ATTRNAME = 'cmf_uid'
 
 
+class DummyUniqueIdHandlerTool(Implicit):
+
+    implements(IUniqueIdHandler)
+
+    def __init__(self):
+        self.counter = 0
+
+    def register(self, ob):
+
+        uid_assigner = getUtility(IUniqueIdAnnotationManagement)
+        annotation = uid_assigner(ob, UID_ATTRNAME)
+        annotation.setUid( self.counter )
+        self.counter += 1
+
+    def unregister(self, ob):
+
+        try:
+           delattr(ob, UID_ATTRNAME)
+        except AttributeError:
+           raise UniqueIdError
+
+
 class UniqueIdAnnotationToolTests(SecurityTest):
 
-    layer = EventZCMLLayer
+    layer = UidEventZCMLLayer
 
     def _getTargetClass(self):
         from Products.CMFUid.UniqueIdAnnotationTool \
@@ -46,12 +76,44 @@ class UniqueIdAnnotationToolTests(SecurityTest):
     def setUp(self):
         SecurityTest.setUp(self)
         self.root._setObject('portal_uidannotation', self._getTargetClass()())
-        self.root._setObject('dummy', DummyContent(id='dummy'))
+        self.root._setObject('portal_uidhandler', DummyUniqueIdHandlerTool())
 
         sm = getSiteManager()
         sm.registerUtility( self.root.portal_uidannotation
                           , IUniqueIdAnnotationManagement
                           )
+        sm.registerUtility( self.root.portal_uidhandler
+                          , IUniqueIdHandler
+                          )
+
+        self.root._setObject('dummy', DummyContent(id='dummy'))
+        self.root._setObject('site', SimpleFolder('site'))
+
+        transaction.savepoint(optimistic=True)
+
+    def _initPolicyAndUser( self
+                          , a_lambda=None
+                          , v_lambda=None
+                          , c_lambda=None
+                          ):
+        from AccessControl import SecurityManager
+
+        def _promiscuous( *args, **kw ):
+            return 1
+
+        if a_lambda is None:
+            a_lambda = _promiscuous
+
+        if v_lambda is None:
+            v_lambda = _promiscuous
+
+        if c_lambda is None:
+            c_lambda = _promiscuous
+
+        scp = _SensitiveSecurityPolicy( v_lambda, c_lambda )
+        SecurityManager.setSecurityPolicy( scp )
+        newSecurityManager( None
+                          , _AllowedUser(a_lambda).__of__(self.app.acl_users))
 
     def test_z3interfaces(self):
         from zope.interface.verify import verifyClass
@@ -84,68 +146,137 @@ class UniqueIdAnnotationToolTests(SecurityTest):
     #   obj.manage_afterAdd(obj_at_target, obj_at_target, target_folder)
     #   obj.manage_afterClone(obj_at_target, obj_at_target)
 
-    def test_simulateItemAddRemovingUid(self):
-        dummy = self.root.dummy
-        annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
+    def test_simulateItemAddAssigningUid(self):
+        # an annotated object is set in place
+        dummy = DummyContent(id='dummycontent')
+        self.root.portal_uidannotation.assign_on_add = True
+        self.root._setObject('dummycontent', dummy)
 
-        annotation.__of__(dummy).manage_afterAdd(dummy, None)
+        annotation = getattr(dummy, UID_ATTRNAME, None)
+
+        self.failUnless(annotation is not None)
+    
+    def test_simulateItemAddRemovingUid(self):
+        # an annotated object is set in place
+        dummy = DummyContent(id='dummycontent')
+        annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
+        self.root._setObject('dummycontent', dummy)
+
         self.assertRaises(AttributeError, getattr, dummy, UID_ATTRNAME)
 
-    def test_simulateItemAddDoesNotTouchUid(self):
-        dummy = self.root.dummy
+    def test_simulateItemAddAssignsNewUid(self):
+        # an annotated object is set in place
+        dummy = DummyContent(id='dummycontent')
         annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
+        self.root.portal_uidannotation.assign_on_add = True
+        self.root._setObject('dummycontent', dummy)
 
+        self.failIf( getattr(dummy, UID_ATTRNAME)()==annotation() )
+
+    def test_simulateItemAddDoesNotTouchUid(self):
+        # an annotated object is set in place
+        dummy = DummyContent(id='dummycontent')
+        annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
         self.root.portal_uidannotation.remove_on_add = False
-        annotation.__of__(dummy).manage_afterAdd(dummy, None)
+        self.root._setObject('dummycontent', dummy)
+
         self.assertEqual(getattr(dummy, UID_ATTRNAME), annotation)
 
     def test_simulateItemRename(self):
-        dummy = self.root.dummy
+        # an object is set in place, annotated and then renamed
+        self._initPolicyAndUser() # allow copy/paste operations
+        dummy = TheClass('dummy')
+        site = self.root.site
+        site._setObject('dummy', dummy)
         annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
 
-        annotation.__of__(dummy).manage_beforeDelete(dummy, None)
-        annotation.__of__(dummy).manage_afterAdd(dummy, None)
-        self.assertEqual(getattr(dummy, UID_ATTRNAME), annotation)
+        transaction.savepoint(optimistic=True)
+
+        site.manage_renameObject(id='dummy', new_id='dummy2')
+        new_annotation = getattr(site.dummy2, UID_ATTRNAME)
+        self.assertEqual(annotation(), new_annotation())
 
     def test_simulateItemCloneRemovingUid1(self):
-        dummy = self.root.dummy
+        # an object is set in place, annotated and then copied
+        self._initPolicyAndUser() # allow copy/paste operations
+        dummy = TheClass('dummy')
+        site = self.root.site
+        site._setObject('dummy', dummy)
         annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
+        self.root._setObject('folder1', SimpleFolder('folder1'))
 
-        annotation.__of__(dummy).manage_afterAdd(dummy, None)
-        annotation.__of__(dummy).manage_afterClone(dummy)
-        self.assertRaises(AttributeError, getattr, dummy, UID_ATTRNAME)
+        transaction.savepoint(optimistic=True)
+        cookie = site.manage_copyObjects(ids=['dummy'])
+        self.root.folder1.manage_pasteObjects( cookie )
+
+        self.assertRaises(AttributeError, getattr, self.root.folder1.dummy, UID_ATTRNAME)
 
     def test_simulateItemCloneRemovingUid2(self):
-        dummy = self.root.dummy
+        # an object is set in place, annotated and then copied
+        self._initPolicyAndUser() # allow copy/paste operations
+        dummy = TheClass('dummy')
+        site = self.root.site
+        site._setObject('dummy', dummy)
         annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
-
         self.root.portal_uidannotation.remove_on_add = False
-        annotation.__of__(dummy).manage_afterAdd(dummy, None)
-        annotation.__of__(dummy).manage_afterClone(dummy)
-        self.assertRaises(AttributeError, getattr, dummy, UID_ATTRNAME)
+        self.root._setObject('folder1', SimpleFolder('folder1'))
+
+        transaction.savepoint(optimistic=True)
+        cookie = site.manage_copyObjects(ids=['dummy'])
+        self.root.folder1.manage_pasteObjects( cookie )
+
+        self.assertRaises(AttributeError, getattr, self.root.folder1.dummy, UID_ATTRNAME)
 
     def test_simulateItemCloneDoesNotTouchUid(self):
-        dummy = self.root.dummy
+        # an object is set in place, annotated, and then copied
+        self._initPolicyAndUser() # allow copy/paste operations
+        dummy = TheClass('dummy')
+        site = self.root.site
+        site._setObject('dummy', dummy)
         annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
-
         self.root.portal_uidannotation.remove_on_clone = False
-        annotation.__of__(dummy).manage_afterAdd(dummy, None)
-        annotation.__of__(dummy).manage_afterClone(dummy)
-        self.assertEqual(getattr(dummy, UID_ATTRNAME), annotation)
+        self.root._setObject('folder1', SimpleFolder('folder1'))
+
+        transaction.savepoint(optimistic=True)
+        cookie = site.manage_copyObjects(ids=['dummy'])
+        self.root.folder1.manage_pasteObjects( cookie )
+        new_annotation = getattr(self.root.folder1.dummy, UID_ATTRNAME)
+
+        self.assertEqual(annotation(), new_annotation() )
+
+    def test_simulateItemCloneAssignsNewUid(self):
+        # an object is set in place, annotated, and then copied
+        self._initPolicyAndUser() # allow copy/paste operations
+        dummy = TheClass('dummy')
+        site = self.root.site
+        site._setObject('dummy', dummy)
+        annotation = self.root.portal_uidannotation(dummy, UID_ATTRNAME)
+        self.root.portal_uidannotation.assign_on_clone = True
+        self.root._setObject('folder1', SimpleFolder('folder1'))
+
+        transaction.savepoint(optimistic=True)
+        cookie = site.manage_copyObjects(ids=['dummy'])
+        self.root.folder1.manage_pasteObjects( cookie )
+        new_annotation = getattr(self.root.folder1.dummy, UID_ATTRNAME)
+
+        self.failIf( annotation() == new_annotation() )
 
     def test_simulateNestedFolderCloneRemovingUid1(self):
-        self.root._setObject( 'foo', PortalFolder(id='foo') )
-        foo = self.root.foo
-        foo._setObject( 'sub1', PortalFolder(id='sub1') )
-        foo.sub1._setObject( 'sub2', PortalFolder(id='sub2') )
+        self.root.site._setObject( 'foo', SimpleFolder(id='foo') )
+        self.root.site._setObject( 'foo2', SimpleFolder(id='foo2') )
+        foo = self.root.site.foo
+        foo._setObject( 'sub1', SimpleFolder(id='sub1') )
+        foo.sub1._setObject( 'sub2', SimpleFolder(id='sub2') )
         foo.sub1.sub2._setObject( 'baz', DummyContent(id='baz', catalog=1) )
         baz = foo.sub1.sub2.baz
         annotation = self.root.portal_uidannotation(baz, UID_ATTRNAME)
         self.assertEqual( getattr(baz, UID_ATTRNAME), annotation )
 
-        notify(ObjectAddedEvent(foo, foo))
-        notify(ObjectClonedEvent(foo))
-        self.assertRaises(AttributeError, getattr, baz, UID_ATTRNAME)
+        transaction.savepoint(optimistic=True)
+        cookie = self.root.site.manage_copyObjects(ids='foo')
+        self.root.site.foo2.manage_pasteObjects(cookie)
+
+        self.assertRaises(AttributeError, getattr, self.root.site.foo2.foo.sub1.sub2.baz, UID_ATTRNAME)
 
 
 def test_suite():
